BankingKube_app/Dynamic_Pod_Sec/k8s/webhook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admission-controller
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admission-controller
  template:
    metadata:
      labels:
        app: admission-controller
    spec:
      containers:
        - name: admission-controller
          image: dynamic_pod_sec
          volumeMounts:
            - name: tls-certs
              mountPath: /tls
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: admission-controller-tls
