BankingKube_app/Dynamic_Pod_Sec/k8s/webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admission-controller-service
  namespace: default
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    app: admission-controller
